@@ -1,2 +1,7 @@
 # Minecraft 2D
- Minecraft in 2D
+
+> Jeu Minecraft en 2D, possibilité de casser et poser des blocs, se déplacer et observer de magnifique levé et couché de Soleil.
+
+### Commande pour lancer le .Jar : 
+
+**java --module-path /usr/lib/JAVA_HOME/lib --add-modules javafx.fxml,javafx.controls,javafx.media -jar ./Minecraft-2D.jar**
